Improved Contact Form

--- a/src/zinc_cli/infrastructure/services/contact_api/lambda/mail_template.html
+++ b/src/zinc_cli/infrastructure/services/contact_api/lambda/mail_template.html
@@ -1,13 +1,39 @@
 <html><head><style>
-.box { max-width: 720px; padding: 0.7em; margin: 5px; background-color: #eee; border-left: 4px solid #bbb; }
-.cell-title { font-size: 0.9em; }
-.cell-title-grey { color: #666; }
-.info-box { background-color: #def9ff; border-left: 4px solid #3289e6; color: #3289e6; }
-</style></head><body>
 
-      <div class="box info-box">
+.container { max-width: 680px; }
+.box { padding: 0.7em; margin: 0.5em; border: 1px solid #ccc; border-radius: 3px; }
+.cell-title { font-size: 0.9em; }
+.cell-title-grey { color: #666; font-style: italic}
+.info-box { background-color: #def9ff; color: #3289e6; border-color: #3289e6;}
+
+.header-cell {display: flex; }
+.header-label {color: #888; width: 5em;}
+.header-content {}
+.row-item:not(:last-child) {margin-bottom: 0.5em;}
+
+</style></head><body>
+<div class="container">
+
+    <div class="box info-box">
           <div>This email was sent to you by your PixiWeb contact form.</div>
       </div>
+
+        <div class="box">
+            <div class="header-cell row-item">
+              <div class="header-label">Name</div>
+              <div class="header-content">Jakrin Juangbhanich</div>
+            </div>
+
+            <div class="header-cell row-item">
+              <div class="header-label">Email</div>
+              <div class="header-content">juangbhanich.k@gmail.com</div>
+            </div>
+
+            <div class="header-cell row-item">
+              <div class="header-label">Phone</div>
+              <div class="header-content">0439408058</div>
+            </div>
+        </div>
 
       <div class="box">
           <div class="cell-title cell-title-grey">Form Title</div>
@@ -19,4 +45,4 @@
           <div>Something Something</div>
         </div>
 
-</body></html>
+</div></body></html>
